@@ -61,6 +61,11 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static org.xwiki.contrib.guidedtour.internal.util.GuidedTourConstants.TOUR_CLASS;
 
+/**
+ * Test class for {@link ToursManager}.
+ *
+ * @version $Id$
+ */
 @ComponentTest
 class ToursManagerTest
 {
@@ -70,9 +75,9 @@ class ToursManagerTest
 
     private final SolrDocumentList solrDocumentList = new SolrDocumentList();
 
-    private final TourDTO tourDTO = new TourDTO(TOUR_ID, "dto Title", true);
+    private final TourDTO tourDTO = new TourDTO(TOUR_ID, "dto Title", true, "description");
 
-    private final TourDTO tourDTOUpdated = new TourDTO(TOUR_ID, "updated title", false);
+    private final TourDTO tourDTOUpdated = new TourDTO(TOUR_ID, "updated title", false, "description");
 
     @InjectMockComponents
     private ToursManager toursManager;
@@ -126,69 +131,74 @@ class ToursManagerTest
     @BeforeEach
     void setup() throws XWikiException
     {
-        when(wikiContextProvider.get()).thenReturn(wikiContext);
-        when(wikiContext.getWiki()).thenReturn(xwiki);
-        when(documentReferenceResolver.resolve(TOUR_ID)).thenReturn(documentReference);
-        when(xwiki.getDocument(documentReference, wikiContext)).thenReturn(xwikiDocument);
-        when(xwikiDocument.newXObject(TOUR_CLASS, wikiContext)).thenReturn(baseObject);
-        when(xwikiDocument.getXObject(TOUR_CLASS)).thenReturn(baseObject);
-        solrDocumentList.add(solrDocument);
+        when(this.wikiContextProvider.get()).thenReturn(this.wikiContext);
+        when(this.wikiContext.getWiki()).thenReturn(this.xwiki);
+        when(this.documentReferenceResolver.resolve(TOUR_ID)).thenReturn(this.documentReference);
+        when(this.xwiki.getDocument(this.documentReference, this.wikiContext)).thenReturn(this.xwikiDocument);
+        when(this.documentReference.getName()).thenReturn(TOUR_ID);
+        when(this.xwikiDocument.newXObject(TOUR_CLASS, this.wikiContext)).thenReturn(this.baseObject);
+        when(this.xwikiDocument.getXObject(TOUR_CLASS)).thenReturn(this.baseObject);
+        this.solrDocumentList.add(this.solrDocument);
     }
 
     @Test
     void createTour() throws XWikiException, DuplicatedIdException
     {
-        when(xwikiDocument.getXObject(TOUR_CLASS)).thenReturn(null);
+        when(this.xwikiDocument.getXObject(TOUR_CLASS)).thenReturn(null);
 
-        toursManager.createTour(tourDTO);
-        verify(baseObject, times(1)).set("title", tourDTO.getTitle(), wikiContext);
-        verify(xwiki, times(1)).saveDocument(xwikiDocument, "Tour created.", wikiContext);
+        this.toursManager.createTour(this.tourDTO);
+        verify(this.baseObject, times(1)).set("title", this.tourDTO.getTitle(), this.wikiContext);
+        verify(this.xwiki, times(1)).saveDocument(this.xwikiDocument, "Tour created.", this.wikiContext);
     }
 
     @Test
     void createTourDuplicate()
     {
         DuplicatedIdException exception = assertThrows(DuplicatedIdException.class, () -> {
-            this.toursManager.createTour(tourDTO);
+            this.toursManager.createTour(this.tourDTO);
         });
         assertEquals(exception.getMessage(),
-            String.format("A tour with the same ID [%s] already exists.", tourDTO.getId()));
+            String.format("A tour with the same ID [%s] already exists.", this.tourDTO.getId()));
     }
 
     @Test
     void getAllTours() throws Exception
     {
-        when(queryUtil.executeQuery("class:XWiki.GuidedTour.TourClass", "type:DOCUMENT",
-            List.of(TourProperty.TITLE.formKey(CLASS_PREFIX),
-                TourProperty.IS_ACTIVE_BOOL.formKey(CLASS_PREFIX), TourProperty.IS_ACTIVE_INT.formKey(CLASS_PREFIX)))).thenReturn(solrDocumentList);
-        when(solrDocument.getFirstValue("property.XWiki.GuidedTour.TourClass.title_string")).thenReturn("tour title");
-        when(solrDocument.getFirstValue("property.XWiki.GuidedTour.TourClass.isActive_int")).thenReturn(1);
-        when(solrDocumentReferenceResolver.resolve(solrDocument, EntityType.DOCUMENT)).thenReturn(documentReference);
-        when(tasksManager.getAllTasks(documentReference.toString())).thenReturn(new ArrayList<>());
+        when(this.queryUtil.executeQuery("class:XWiki.GuidedTour.TourClass",
+            "{!q.op=AND} type:DOCUMENT AND -name:TourTemplate",
+            List.of(TourProperty.TITLE.formKey(CLASS_PREFIX), TourProperty.DESCRIPTION.formKey(CLASS_PREFIX),
+                TourProperty.IS_ACTIVE_BOOL.formKey(CLASS_PREFIX), TourProperty.IS_ACTIVE_INT.formKey(CLASS_PREFIX)),
+            "")).thenReturn(this.solrDocumentList);
+        when(this.solrDocument.getFirstValue("property.XWiki.GuidedTour.TourClass.title_string")).thenReturn(
+            "tour title");
+        when(this.solrDocument.getFirstValue("property.XWiki.GuidedTour.TourClass.isActive_boolean")).thenReturn(true);
+        when(this.solrDocumentReferenceResolver.resolve(this.solrDocument, EntityType.DOCUMENT)).thenReturn(
+            this.documentReference);
+        when(this.tasksManager.getAllTasks(this.documentReference.toString())).thenReturn(new ArrayList<>());
 
-        List<TourDTO> tours = toursManager.getAllTours();
+        List<TourDTO> tours = this.toursManager.getAllTours();
         assertEquals(1, tours.size());
         assertEquals("tour title", tours.get(0).getTitle());
-        assertTrue(tours.get(0).isActive());
-        assertTrue(tours.get(0).getTasksList().isEmpty());
+        assertTrue(tours.getFirst().isActive());
+        assertTrue(tours.getFirst().getTasksList().isEmpty());
     }
 
     @Test
     void updateTour() throws Exception
     {
-        when(baseObject.getOwnerDocument()).thenReturn(xwikiDocument);
-        toursManager.updateTour(tourDTOUpdated);
-        verify(baseObject, times(1)).set("title", tourDTOUpdated.getTitle(), wikiContext);
-        verify(baseObject, times(1)).set("isActive", 0, wikiContext);
-        verify(xwiki, times(1)).saveDocument(xwikiDocument, "Updated tour object.", wikiContext);
+        when(this.baseObject.getOwnerDocument()).thenReturn(this.xwikiDocument);
+        this.toursManager.updateTour(this.tourDTOUpdated);
+        verify(this.baseObject, times(1)).set("title", this.tourDTOUpdated.getTitle(), this.wikiContext);
+        verify(this.baseObject, times(1)).set("isActive", 0, this.wikiContext);
+        verify(this.xwiki, times(1)).saveDocument(this.xwikiDocument, "Updated tour object.", this.wikiContext);
     }
 
     @Test
     void updateTourInvalidId()
     {
-        when(xwikiDocument.getXObject(TOUR_CLASS)).thenReturn(null);
+        when(this.xwikiDocument.getXObject(TOUR_CLASS)).thenReturn(null);
         InvalidIdException exception = assertThrows(InvalidIdException.class, () -> {
-            toursManager.updateTour(tourDTOUpdated);
+            this.toursManager.updateTour(this.tourDTOUpdated);
         });
         assertEquals(exception.getMessage(), String.format("Tour with the given id [%s] does not exist.", TOUR_ID));
     }
@@ -196,19 +206,19 @@ class ToursManagerTest
     @Test
     void deleteTour() throws Exception
     {
-        when(documentReference.getLastSpaceReference()).thenReturn(spaceReference);
-        when(requestFactory.createDeleteRequest(List.of(documentReference.getLastSpaceReference()))).thenReturn(
-            deleteReq);
-        toursManager.deleteTour(TOUR_ID);
-        verify(jobExecutor, times(1)).execute(RefactoringJobs.DELETE, deleteReq);
+        when(this.documentReference.getLastSpaceReference()).thenReturn(this.spaceReference);
+        when(this.requestFactory.createDeleteRequest(
+            List.of(this.documentReference.getLastSpaceReference()))).thenReturn(this.deleteReq);
+        this.toursManager.deleteTour(TOUR_ID);
+        verify(this.jobExecutor, times(1)).execute(RefactoringJobs.DELETE, this.deleteReq);
     }
 
     @Test
     void deleteTourInvalidId()
     {
-        when(xwikiDocument.getXObject(TOUR_CLASS)).thenReturn(null);
+        when(this.xwikiDocument.getXObject(TOUR_CLASS)).thenReturn(null);
         InvalidIdException exception = assertThrows(InvalidIdException.class, () -> {
-            toursManager.deleteTour(TOUR_ID);
+            this.toursManager.deleteTour(TOUR_ID);
         });
         assertEquals(exception.getMessage(), String.format("Tour with the given id [%s] does not exist.", TOUR_ID));
     }
